# swap

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: deploy.yml
deploy/: .env.droplet.example  Caddyfile.example  Dockerfile  deploy-service.sh  docker-compose.droplet.yaml  docker-compose.yaml
docs/: MAINNET.md  TDQS.md  TESTNET.md
scripts/: gen_deposit_wallet.py  migrate_tag_reuse.py  preflight.py  register_service.py
scripts/testnet/: TestUSDT.sol  _common.py  callback_server.py  deploy_token.py  e2e.py  pay.py  wallet.py
swap/: __init__.py  auth.py  config.py  db.py  main.py  mcp_app.py  models.py  orders.py  repository.py  schema.sql  states.py  web.py
swap/clients/: adapter.py  trongrid.py
swap/services/: aml.py  callback.py  delivery.py  monitor.py  stats.py  sweep.py  watcher.py
swap/site/: index.html  llms-full.txt  llms.txt  oferta.html  robots.txt  site.webmanifest  sitemap.xml  stats.html  style.css
swap/tron/: hd.py
tests/: conftest.py  test_aml.py  test_callback.py  test_callback_server.py  test_delivery.py  test_mcp.py  test_monitor.py  test_notify.py  test_orders.py  test_scan.py  test_states.py  test_stats.py  test_trongrid.py  test_web.py
